--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -105,6 +105,13 @@ async function handleGoogleLogin(response) {
     CURRENT_COACH_ID = resp.coachId;
     CURRENT_COACH_NAME = resp.coachName;
     CURRENT_COACH_ROLE = resp.rateRole;
+        // Persist session
+    localStorage.setItem("coachSession", JSON.stringify({
+      id: CURRENT_COACH_ID,
+      name: CURRENT_COACH_NAME,
+      role: CURRENT_COACH_ROLE
+    }));
+
     coachNameDisplay.textContent = CURRENT_COACH_NAME;
     callSectionCoachNameDisplay.textContent = CURRENT_COACH_NAME;
 
@@ -491,6 +498,32 @@ const historyMonthYear = document.getElementById('historyMonthYear');
   let LAST_SELECTED_STUDENT = null;
   let LAST_DRAFTS = [];
 
+    // --- Restore persisted session from localStorage (if present)
+(function restoreSession() {
+  try {
+    const raw = localStorage.getItem("coachSession");
+    if (!raw) return;
+    const saved = JSON.parse(raw);
+    if (!saved || !saved.id) return;
+
+    CURRENT_COACH_ID = saved.id;
+    CURRENT_COACH_NAME = saved.name || saved.id;
+    CURRENT_COACH_ROLE = saved.role || "";
+
+    // Update UI
+    if (coachNameDisplay) coachNameDisplay.textContent = CURRENT_COACH_NAME;
+    if (callSectionCoachNameDisplay) callSectionCoachNameDisplay.textContent = CURRENT_COACH_NAME;
+
+    // Go straight to dashboard and load data
+    switchSection(dashboardSection);
+    fetchMonthlyEarnings();
+    loadStudentIds();
+  } catch (e) {
+    console.warn("Restore session failed:", e);
+    localStorage.removeItem("coachSession");
+  }
+})();
+
 
   // Helpers UI
   function showMessage(box, message, isSuccess = true) {
@@ -838,6 +871,14 @@ loginForm.addEventListener('submit', async (e) => {
     CURRENT_COACH_ROLE = resp.rateRole || resp.role;
     if (!CURRENT_COACH_ROLE) throw new Error("Ruolo coach non trovato. Contatta l'amministratore.");
 
+    // Persist session
+localStorage.setItem("coachSession", JSON.stringify({
+  id: CURRENT_COACH_ID,
+  name: CURRENT_COACH_NAME,
+  role: CURRENT_COACH_ROLE
+}));
+
+
     coachNameDisplay.textContent = CURRENT_COACH_NAME;
     callSectionCoachNameDisplay.textContent = CURRENT_COACH_NAME;
 
@@ -948,6 +989,8 @@ function renderHistoryTable() {
     CURRENT_ALLOCATIONS_BY_STUDENT = {};
     coachIdInput.value = "";
     passwordInput.value = "";
+    // Clear persisted session
+localStorage.removeItem("coachSession");
     switchSection(loginSection);
     hideMessage(loginMessageBox);
   });
