--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -535,6 +535,8 @@ async function handleGoogleLogin(response) {
   const viewFolderBtn = document.getElementById('viewFolderBtn');
   const viewCallLogBtn = document.getElementById('viewCallLogBtn');
   const viewReportCardsBtn = document.getElementById('viewReportCardsBtn');
+    const viewCoachingDebriefBtn = document.getElementById('viewCoachingDebriefBtn');
+const coachingDebriefSection = document.getElementById('coachingDebriefSection');
   const logoutBtn = document.getElementById('logoutBtn');
 
   const studentIdSelect = document.getElementById('studentId');
@@ -941,6 +943,18 @@ localStorage.setItem("coachSession", JSON.stringify({
   }
 });
 
+viewCoachingDebriefBtn.addEventListener('click', () => {
+  switchSection(coachingDebriefSection);
+
+  // Precompila la data odierna
+  const today = new Date();
+  const yyyy = today.getFullYear();
+  const mm = String(today.getMonth() + 1).padStart(2, '0');
+  const dd = String(today.getDate()).padStart(2, '0');
+  document.getElementById('debriefDateInput').value = `${yyyy}-${mm}-${dd}`;
+});
+
+    
 // My payment folder
 viewFolderBtn.addEventListener('click', async () => {
   if (!CURRENT_COACH_ID) return;
