--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -291,16 +291,15 @@ async function handleGoogleLogin(response) {
   </div>
 </div>
 
-<!-- Coaching Debrief -->
-
-        <div class="flex justify-between items-center mb-6">
-      <h2 class="text-2xl font-semibold">Coaching Debrief</h2>
-      <button id="backToDashboardFromDebriefBtn" 
-        class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500">
-        Back to Dashboard
-      </button>
-    </div>
-
+<!-- Coaching Debrief Section -->
+<div id="coachingDebriefSection" class="hidden">
+  <div class="flex justify-between items-center mb-6">
+    <h2 class="text-2xl font-semibold">Coaching Debrief</h2>
+    <button id="backToDashboardFromDebriefBtn" 
+      class="bg-gray-400 text-white font-semibold py-2 px-4 rounded-xl shadow-lg hover:bg-gray-500">
+      Back to Dashboard
+    </button>
+  </div>
 
     <!-- Meta: Student + Date -->
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-6">
