--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -1556,11 +1556,14 @@ async function loadReportCardTasks() {
     } else {
       let html = '<h3 class="text-xl font-semibold text-gray-800">Tasks</h3><div class="grid gap-4">';
       tasks.forEach(t => {
-        const isDrafted = t.alreadyDrafted;
-        const btnClass = isDrafted
-          ? "bg-indigo-600 hover:bg-indigo-700"
-          : "bg-blue-600 hover:bg-blue-700";
-        const btnLabel = isDrafted ? "Edit Draft" : "Write Report";
+      const thisMonth = new Date().toISOString().slice(0,7); // "2025-10"
+      const hasDraftThisMonth = (LAST_DRAFTS || []).some(d =>
+        d.studentId === t.studentId &&
+        d.contractId === t.contractId &&
+        d.dateISO && d.dateISO.startsWith(thisMonth)
+      );
+      const btnLabel = hasDraftThisMonth ? "Edit Draft" : "Write Report";
+
 
         html += `
           <div class="p-4 bg-white rounded-xl shadow border border-gray-200">
