--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -1604,14 +1604,13 @@ if (CURRENT_COACH_ROLE === "Head Coach" && resp.noShows && resp.noShows.length >
       <details class="mt-4 bg-red-50 rounded-xl border border-red-200">
         <summary class="cursor-pointer px-4 py-2 font-semibold text-red-600 flex justify-between items-center">
           <span>No-show Students (Current Month)</span>
-          <span class="text-sm text-gray-500">(click to expand)</span>
-        </summary>
-        <div class="p-4 space-y-4">
           <button 
             id="submitAllNoShowsBtn" 
-            class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-lg">
+            class="bg-indigo-600 hover:bg-indigo-700 text-white px-3 py-1 rounded text-sm ml-4">
             Submit All
           </button>
+        </summary>
+        <div class="p-4">
           ${renderNoShowList(grouped.current)}
         </div>
       </details>`;
@@ -1622,9 +1621,8 @@ if (CURRENT_COACH_ROLE === "Head Coach" && resp.noShows && resp.noShows.length >
   if (pendingPrev.length) {
     html += `
       <details class="mt-6 bg-red-50 rounded-xl border border-red-200">
-        <summary class="cursor-pointer px-4 py-2 font-semibold text-red-600 flex justify-between items-center">
-          <span>No-show Students (Previous Months)</span>
-          <span class="text-sm text-gray-500">(click to expand)</span>
+        <summary class="cursor-pointer px-4 py-2 font-semibold text-red-600">
+          No-show Students (Previous Months)
         </summary>
         <div class="p-4">
           ${renderNoShowList(pendingPrev)}
@@ -1635,7 +1633,6 @@ if (CURRENT_COACH_ROLE === "Head Coach" && resp.noShows && resp.noShows.length >
   reportCardNoShowsContainer.innerHTML = html;
   reportCardNoShowsContainer.classList.remove('hidden');
 }
-
 
 
   } catch (err) {
